--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ body {
   line-height: 1.6;
   font-size: 15px;
   overflow-y: scroll;
-  
-
+  min-height: 100vh;
+  position: relative;
 }
 
 /* Header */
@@ -28,6 +28,12 @@ header h1 {
   font-size: 1.6rem;   /* not too big */
   color: #16a34a;      /* emerald */
 }
+
+header h1 img {
+  vertical-align: middle;
+  margin-right: 8px;
+}
+
 
 .site-url {
   margin-top: 8px;
@@ -173,13 +179,16 @@ a:hover {
 
 /* Footer */
 footer {
-  background: #111;
+  background: #111111d3;
   color: #fff;
   text-align: center;
   padding: 14px;
   margin-top: 30px;
   font-size: 0.9rem;
-  border-radius: 8px 8px 0 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 footer p {
